# MultiPatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
include/: bps.h  ips.h
src/: bps.cpp  ips.cpp  main.cpp
tests/: main_test.cc  tests.cpp
tests/roms/: Metroid.ips  MobileGolf.bps
